add empowerment session

--- a/book/introduction.html
+++ b/book/introduction.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">2.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">4.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">5.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">6.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">7.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">8.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">9.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">10.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">11.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">12.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">13.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">14.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">14.1.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">3.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.1.</strong> Links</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,7 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>Welcome, friend! Right from the start,
-it's important to state that I'm not here to convince anyone of anything.
+I want to clarify that I'm not here to convince anyone of anything. 
 Nor am I claiming to provide the definitive source on Rust.
 My aim is to make it easier for those interested
 or curious to find the information they need to get started.
@@ -184,12 +184,10 @@ And for those who, like me, appreciate constant reminders of why choosing Rust w
 recognizing that many others, more qualified, have already done so.
 My goal is to curate some of these insights and resources
 in a clear and meaningful way, hoping it resonates with you as well.</p>
-<p>Here you may find links to articles, blog posts,
-videos, books, and any other relevant material that has caught my attention and
-seems worth sharing. Aiming for simplicity and relevance in the fast-growing
-ecosystem that is Rust.</p>
-<p>This book is my humble attempt to contribute to the Rust community,
-sharing my enthusiasm and helping to spread the word.</p>
+<p>This book is an opportunity for me to share my enthusiasm and help spread the
+word. Within these pages, you'll find links to articles, blog posts, videos,
+books, and any other relevant materials that have caught my attention and seem
+worth sharing.</p>
 <p>If you're still reading, I assume you're already on board.
 So, let's embark on this journey together.</p>
 
@@ -198,7 +196,7 @@ So, let's embark on this journey together.</p>
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="learning_resources.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="empowerment.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -209,7 +207,7 @@ So, let's embark on this journey together.</p>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="learning_resources.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="empowerment.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
