--- a/book/print.html
+++ b/book/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">2.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">4.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">5.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">6.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">7.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">8.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">9.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">10.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">11.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">12.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">13.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">14.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">14.1.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">3.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.1.</strong> Links</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,7 +176,7 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>Welcome, friend! Right from the start,
-it's important to state that I'm not here to convince anyone of anything.
+I want to clarify that I'm not here to convince anyone of anything. 
 Nor am I claiming to provide the definitive source on Rust.
 My aim is to make it easier for those interested
 or curious to find the information they need to get started.
@@ -185,14 +185,44 @@ And for those who, like me, appreciate constant reminders of why choosing Rust w
 recognizing that many others, more qualified, have already done so.
 My goal is to curate some of these insights and resources
 in a clear and meaningful way, hoping it resonates with you as well.</p>
-<p>Here you may find links to articles, blog posts,
-videos, books, and any other relevant material that has caught my attention and
-seems worth sharing. Aiming for simplicity and relevance in the fast-growing
-ecosystem that is Rust.</p>
-<p>This book is my humble attempt to contribute to the Rust community,
-sharing my enthusiasm and helping to spread the word.</p>
+<p>This book is an opportunity for me to share my enthusiasm and help spread the
+word. Within these pages, you'll find links to articles, blog posts, videos,
+books, and any other relevant materials that have caught my attention and seem
+worth sharing.</p>
 <p>If you're still reading, I assume you're already on board.
 So, let's embark on this journey together.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="empowerment"><a class="header" href="#empowerment">Empowerment</a></h1>
+<p>If I had to summarize my entire experience with Rust so far in a single paragraph,
+I would probably end up borrowing the words of Nicholas Matsakis and Aaron Turon from the 
+<a href="https://doc.rust-lang.org/book/foreword.html">Foreword</a> section of
+<a href="https://doc.rust-lang.org/book/">The Book</a>.</p>
+<blockquote>
+<p>Rust programming language is fundamentally about empowerment: no matter what
+kind of code you are writing now, Rust empowers you to reach farther, to program
+with confidence in a wider variety of domains than you did before.</p>
+</blockquote>
+<p>Before discussing all the doors Rust can open,
+and all the never-before-imagined domains behind them,
+I'd like to first delve a little into this concept of &quot;empowerment&quot;.</p>
+<p><img src="images/rust-fire-mario-equation.png" alt="rust-fire-mario-equation" /></p>
+<p>The image above comes from a <a href="https://brson.github.io/fireflowers/">delightful portrait</a>
+of the Rust community discussion at the very end of 2016, provided by Brian Anderson.
+Voices back then pointed out that limiting Rust to its safety and low-level programming
+capabilities wasn't enough, or at least, wouldn't be doing it the appropriate justice.
+This is where the illustrated metaphor came from:
+Rust should be seen as the Fire Flower that turns a regular Mario
+into a badass fireball-throwing Mario.</p>
+<p>For me, what makes Rust special is not just the &quot;superpowers&quot; it provides. It's
+the confidence that comes with it. The certainty of delivering more reliable
+code right out of the box, and sometimes even receiving a performance improvement as a
+bonus. This is an experience that changes how you feel about your own code and 
+about your capabilities. This is, for me, what &quot;empowerment&quot; is about.</p>
+<p>The freedom that comes when the self-imposed barriers start to be demolished.
+The fearless environment where major mistakes can be
+caught even before compiling your code. And the guidance that prevents
+disorientation or hopelessness when diving into a lower-level abstraction. This
+is what &quot;empowerment&quot; feels like for me. And this, in my opinion, is what makes
+Rust special and why it's one of the most loved languages ever.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="learning-resources"><a class="header" href="#learning-resources">Learning Resources</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="documentation"><a class="header" href="#documentation">Documentation</a></h1>
