--- a/print.html
+++ b/print.html
@@ -193,14 +193,14 @@ worth sharing.</p>
 So, let's embark on this journey together.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="empowerment"><a class="header" href="#empowerment">Empowerment</a></h1>
 <p>If I had to summarize my entire experience with Rust so far in a single paragraph,
-I would probably end up borrowing the words of Nicholas Matsakis and Aaron Turon from the 
-<a href="https://doc.rust-lang.org/book/foreword.html">Foreword</a> section of
-<a href="https://doc.rust-lang.org/book/">The Book</a>.</p>
+I would probably end up borrowing the words of Nicholas Matsakis and Aaron Turon:</p>
 <blockquote>
-<p>Rust programming language is fundamentally about empowerment: no matter what
+<p>[...] the Rust programming language is fundamentally about empowerment: no matter what
 kind of code you are writing now, Rust empowers you to reach farther, to program
 with confidence in a wider variety of domains than you did before.</p>
 </blockquote>
+<p><em>The entire text can be found in the <a href="https://doc.rust-lang.org/book/foreword.html">Foreword</a> section
+of <a href="https://doc.rust-lang.org/book/">The Book</a>.</em></p>
 <p>Before discussing all the doors Rust can open,
 and all the never-before-imagined domains behind them,
 I'd like to first delve a little into this concept of &quot;empowerment&quot;.</p>
