--- a/print.html
+++ b/print.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">3.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.1.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">4.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">5.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">6.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">7.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">9.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">10.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">11.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">12.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">13.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">14.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">15.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">16.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">16.1.</strong> Links</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -221,13 +221,56 @@ caught even before compiling your code. And the guidance that prevents
 disorientation or hopelessness when diving into a lower-level abstraction. This
 is what &quot;empowerment&quot; feels like for me. And this, in my opinion, is what makes
 Rust special and why it's one of the most loved languages ever.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="community"><a class="header" href="#community">Community</a></h1>
+<p>In the previous section, I discussed how my experience with Rust
+can be summarized by <strong>Empowerment</strong>.
+This is true, and I still think that it's a very
+good starting point because it's closely related to Rust as a programming
+language. Usually, it's the aspects of the programming language that people
+think of and are curious about when reading about one. After all, Rust is a
+programming language, isn't it?</p>
+<p>Well, yes, it is. But the reasons I'm writing this,
+and probably why you're reading it, go far beyond that.</p>
+<p>If you'll allow me to indulge once again in my old,
+probably foolish, habit of summarizing and speculating,
+I would suggest that what lies behind these reasons,
+or beneath Rust's shiny surface, is a community.
+I realize we could say that about almost anything,
+but for Rust, I believe this holds especially true.</p>
+<p>Everything I've said about empowerment, and every aspect I may address here,
+exists or holds true because of Rust's community.
+And this applies to the Rust programming language itself as well.</p>
+<p>So, while the upcoming sections may seem to cover a variety of topics, in
+reality, I'm simply using different words, or finding new excuses,
+to talk about this vibrant and welcoming community.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="learning-resources"><a class="header" href="#learning-resources">Learning Resources</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="documentation"><a class="header" href="#documentation">Documentation</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="performance"><a class="header" href="#performance">Performance</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="safety"><a class="header" href="#safety">Safety</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="concurrency"><a class="header" href="#concurrency">Concurrency</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="community"><a class="header" href="#community">Community</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="community-1"><a class="header" href="#community-1">Community</a></h1>
+<p>In the previous section, I discussed how my experience with Rust
+can be summarized by <strong>Empowerment</strong>.
+This is true, and I still think that it's a very
+good starting point because it's closely related to Rust as a programming
+language. Usually, it's the aspects of the programming language that people
+think of and are curious about when reading about one. After all, Rust is a
+programming language, isn't it?</p>
+<p>Well, yes, it is. But the reasons I'm writing this,
+and probably why you're reading it, go far beyond that.</p>
+<p>If you'll allow me to indulge once again in my old,
+probably foolish, habit of summarizing and speculating,
+I would suggest that what lies behind these reasons,
+or beneath Rust's shiny surface, is a community.
+I realize we could say that about almost anything,
+but for Rust, I believe this holds especially true.</p>
+<p>Everything I've said about empowerment, and every aspect I may address here,
+exists or holds true because of Rust's community.
+And this applies to the Rust programming language itself as well.</p>
+<p>So, while the upcoming sections may seem to cover a variety of topics, in
+reality, I'm simply using different words, or finding new excuses,
+to talk about this vibrant and welcoming community.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tooling"><a class="header" href="#tooling">Tooling</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="real-world-projects"><a class="header" href="#real-world-projects">Real-World Projects</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="future-prospects"><a class="header" href="#future-prospects">Future Prospects</a></h1>
