--- a/book/community.html
+++ b/book/community.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html" class="active"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning_resources.html"><strong aria-hidden="true">4.</strong> Learning Resources</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">5.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">6.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">7.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">9.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html" class="active"><strong aria-hidden="true">10.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">11.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">12.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">13.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">14.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">15.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">16.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">16.1.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html" class="active"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning.html"><strong aria-hidden="true">4.</strong> Learning</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html" class="active"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rustlings_welcome_message.html"><strong aria-hidden="true">15.1.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.2.</strong> Links</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -173,26 +173,29 @@
                     <main>
                         <h1 id="community"><a class="header" href="#community">Community</a></h1>
 <p>In the previous section, I discussed how my experience with Rust
-can be summarized by <strong>Empowerment</strong>.
-This is true, and I still think that it's a very
-good starting point because it's closely related to Rust as a programming
-language. Usually, it's the aspects of the programming language that people
-think of and are curious about when reading about one. After all, Rust is a
-programming language, isn't it?</p>
-<p>Well, yes, it is. But the reasons I'm writing this,
-and probably why you're reading it, go far beyond that.</p>
+can be summarized as <em>Empowerment</em>.
+This is true, and I still think that it's a
+good starting point because it describes the potentials
+that are more closely related to Rust's aspects as a programming language.
+And by &quot;programming language&quot;, I'm also hinting at the idea of a &quot;tool&quot;.</p>
+<p>After all, it's the programming language aspects that people
+first think of and are curious about when reading about one, right?
+And a programming language is what Rust is, isn't it?
+Well, both questions can be answered with a simple &quot;yes&quot;.
+But the reasons I'm writing this,
+and probably the reasons you're reading it, go far beyond that.</p>
 <p>If you'll allow me to indulge once again in my old,
 probably foolish, habit of summarizing and speculating,
 I would suggest that what lies behind these reasons,
-or beneath Rust's shiny surface, is a community.
-I realize we could say that about almost anything,
-but for Rust, I believe this holds especially true.</p>
+or beneath Rust's shiny surface, is a community, really.
+I realize this could be said for many things,
+but I think it's particularly true for Rust.</p>
 <p>Everything I've said about empowerment, and every aspect I may address here,
-exists or holds true because of Rust's community.
-And this applies to the Rust programming language itself as well.</p>
-<p>So, while the upcoming sections may seem to cover a variety of topics, in
+exists or holds true, because of Rust's community.
+This applies to the Rust programming language itself as well.
+So, while the upcoming sections may seem to cover various topics, in
 reality, I'm simply using different words, or finding new excuses,
-to talk about this vibrant and welcoming community.</p>
+to talk about this <a href="images/celebration.jpg">vibrant</a> and welcoming community.</p>
 
                     </main>
 
@@ -202,7 +205,7 @@ to talk about this vibrant and welcoming community.</p>
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="learning_resources.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="learning.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -216,7 +219,7 @@ to talk about this vibrant and welcoming community.</p>
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="learning_resources.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="learning.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
