--- a/book/empowerment.html
+++ b/book/empowerment.html
@@ -194,9 +194,10 @@ Rust should be seen as the Fire Flower that turns a regular Mario
 into a badass fireball-throwing Mario.</p>
 <p>For me, what makes Rust special is not just the &quot;superpowers&quot; it provides. It's
 the confidence that comes with it. The certainty of delivering more reliable
-code right out of the box, and sometimes even receiving a performance improvement as a
-bonus. This is an experience that changes how you feel about your own code and 
-about your capabilities. This is, for me, what empowerment is about.</p>
+code right out of the box, and sometimes even receiving a <a href="https://www.reddit.com/r/rustjerk/comments/sqy221/anything_built_in_rust_is_blazingly_fast_by/">performance
+improvement</a>
+as a bonus. This is an experience that changes how you feel about your own code
+and about your capabilities. This is, for me, what empowerment is about.</p>
 <p>The freedom that comes when the self-imposed barriers start to be demolished.
 The fearless environment where major mistakes can be
 caught even before compiling your code. And the guidance that prevents
